# risk-game-engine

./: .gitignore  README.md  match_simulator.py  setup_dev_env.sh  setup_env.sh
engine/: exceptions.py  game_engine.py
example_submissions/: complex.py  example.py  simple.py  simple_profiled.py
queries/: query_claim_territory.py  query_place_initial_troop.py
risk-engine/: pyproject.toml
risk-shared/: pyproject.toml
risk-shared/src/risk_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
risk-shared/src/risk_shared/maps/: earth.py  map.py
risk-shared/src/risk_shared/models/: player_model.py
risk-shared/src/risk_shared/output/: ban_type.py
risk-shared/src/risk_shared/queries/: base_query.py  query_attack.py  query_claim_territory.py  query_defend.py  query_distribute_troops.py  query_fortify.py  query_place_initial_troop.py  query_redeem_cards.py  query_troops_after_attack.py  query_type.py
risk-shared/src/risk_shared/records/: base_move.py  base_record.py  record_attack.py  record_banned.py  record_cancelled.py  record_drew_card.py  record_player_eliminated.py  record_redeemed_cards.py  record_shuffled_cards.py  record_start_game.py  record_start_turn.py  record_territory_conquered.py  record_winner.py
risk-shared/src/risk_shared/records/moves/: move_attack.py  move_attack_pass.py  move_claim_territory.py  move_defend.py  move_distribute_troops.py  move_fortify.py  move_fortify_pass.py  move_place_initial_troop.py  move_redeem_cards.py  move_troops_after_attack.py
risk-shared/src/risk_shared/records/types/: move_type.py  record_type.py
(+126 files in other folders)
